--- a/main.html
+++ b/main.html
@@ -11,6 +11,10 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<p id="yellow" style="background-color: yellow; border: 1px solid green;">Paragraph-1</p>
+	<p id="red" style="background-color: red; border: 1px solid black;">Paragraph-2</p>
+	<p id="green" style="background-color: green; border: 1px solid yellow;">Paragraph-3</p>																
+
 </body>
 
 </html>
